# cargo-mutants

./: .codespell.dict  .codespellrc  .gitattributes  .gitignore  .markdownlint.jsonc  404.html  AGENTS.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  LICENSE  NEWS.md  README.md  SECURITY.md  index.html  justfile  print.html  release-plz.toml  searchindex.js  searchindex.json
.cargo/: audit.toml  mutants.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
.github/workflows/: actionlint.yml  book.yml  cargo-audit.yml  codebuild.yml  container.yml  deploy-book.yml  install.yml  msrv.yml  mutate-self.yaml  release-book.yml  release-plz.yml  release-preparations.yml  release.yml  rust.yml  scorecards-analysis.yml  tests.yml  typos.yml
book/: book.toml
book/src/: SUMMARY.md  attrs.md  baseline.md  build-dirs.md  cargo-args.md  cautions.md  changelog.md  ci.md  config-file.md  config.md  controlling.md  error-values.md  exit-codes.md  fail-fast.md  filter_mutants.md  getting-started.md  goals.md  how-it-works.md  how-to-help.md  in-diff.md  in-place.md  installation.md  integrations.md  iterate.md  jobserver.md  limitations.md  lints.md  list.md  macros.md  mutants-out.md  mutants.md  nextest.md  output.md  parallelism.md  performance.md  pr-diff.md  shards.md  skip.md  skip_calls.md  skip_files.md  (+9 more)
design/: obey-cfg.md
doc/: fixing-mutants.md
examples/: custom_config.toml
examples/workflows/: basic.yml  in-diff.yml  sharded.yml
mutants_attrs/: Cargo.toml  NEWS.md  README.md
mutants_attrs/src/: lib.rs
src/: annotation.rs  ast.rs  build_dir.rs  cargo.rs  config.rs  console.rs  copy_tree.rs  diff_filter.rs  exit_code.rs  filter.rs  find_files.rs  fnvalue.rs  glob.rs  in_diff.rs  incremental.rs  interrupt.rs  lab.rs  list.rs  log_file.rs  main.rs  manifest.rs  mutant.rs  mutate.rs  options.rs  outcome.rs  output.rs  package.rs  path.rs  pretty.rs  process.rs  run.rs  scenario.rs  shard.rs  signal.rs  source.rs  span.rs  tail_file.rs  textedit.rs  timeouts.rs  tool.rs  (+3 more)
src/copy_tree/: unix.rs  windows.rs
src/output/: lock.rs
src/plan/: concrete.rs  mod.rs
src/process/: unix.rs  windows.rs
src/snapshots/: cargo_mutants__visit__test__expected_mutants_for_own_source_tree.snap
testdata/: README.md
testdata/already_failing_doctests/: Cargo.toml
testdata/already_failing_doctests/src/: lib.rs
testdata/already_failing_tests/: Cargo.toml
testdata/already_hangs/: Cargo_test.toml
testdata/alternate_registry/: Cargo_test.toml  README.md
testdata/cdylib/: Cargo_test.toml  README.md
testdata/cfg_attr_test_skip/: Cargo.toml
testdata/cfg_test_inner/: Cargo.toml  README.md
testdata/cross_package_tests/: Cargo_test.toml  README.md
testdata/custom_top_file/: Cargo.toml
testdata/dangling_mod/: Cargo_test.toml  README.md
testdata/dependency/: Cargo.toml
testdata/diff0/: Cargo_test.toml
testdata/diff1/: Cargo.toml
testdata/error_value/: README.md
testdata/everything_skipped/: README.md
testdata/exclude_re_attr/: Cargo_test.toml
testdata/exclude_re_attr_two_invalid_regexes/: Cargo_test.toml
testdata/hang_const/: Cargo_test.toml  README.md
testdata/many_patterns/: Cargo.toml  README.md
testdata/missing_test/: Cargo.toml  Cargo_test.toml
testdata/missing_test_fixed/: Cargo_test.toml  README.md
testdata/mut_ref/: Cargo.toml  Cargo_test.toml
testdata/mutants_attrs/: README.md
testdata/nested_mod/: Cargo.toml  README.md
testdata/never_type/: Cargo.toml  Cargo_test.toml
testdata/nightly_only/: Cargo_test.toml  README.md
testdata/override_dependency/: Cargo.toml
testdata/override_dependency/.cargo_test/: config.toml
testdata/override_dependency/tests/: api.rs
testdata/patch_dependency/: Cargo.toml
testdata/patch_dependency/tests/: api.rs
testdata/proc_macro/: Cargo.toml  README.md
testdata/relative_dependency/: Cargo_test.toml
testdata/replace_dependency/: Cargo.toml
testdata/replace_dependency/tests/: api.rs
testdata/skip_attr_block/: Cargo_test.toml  README.md
testdata/skip_attr_expressions/: Cargo_test.toml  README.md
testdata/small_well_tested/: Cargo_test.toml
testdata/struct_with_no_default/: Cargo_test.toml
testdata/symlink/: Cargo_test.toml  README.md
testdata/unapply/: README.md
testdata/unsafe/: Cargo_test.toml
testdata/well_tested/: Cargo.toml
testdata/with_child_directories/: Cargo_test.toml
testdata/workspace/: Cargo_test.toml  README.md
testdata/workspace_default_members/: Cargo_test.toml
tests/: build_dir.rs  check_build.rs  cli.rs  colors.rs  config.rs  error_value.rs  in_diff.rs  in_place.rs  insta.rs  iterate.rs  jobs.rs  list.rs  main.rs  nextest.rs  shard.rs  trace.rs  unix.rs  windows.rs  workspace.rs
tests/cli/: build_dir.rs  colors.rs  config.rs  diff_filter.rs  error_value.rs  in_diff.rs  in_place.rs  insta_snapshot.rs  jobs.rs  main.rs  nextest.rs  shard.rs  trace.rs  windows.rs  workspace.rs
tests/common/: README.md  common.rs
tests/failpoints/: README.md  main.rs  nextest.rs
tests/integration_util/: mod.rs
tests/main/: colors.rs
tests/snapshots/: cli__cargo_mutants_in_override_dependency_tree_passes.snap  cli__cargo_mutants_in_patch_dependency_tree_passes.snap  cli__cargo_mutants_in_relative_dependency_tree_passes.snap  cli__cargo_mutants_in_replace_dependency_tree_passes.snap  cli__cdylib_tree_is_well_tested.snap  cli__check_succeds_in_tree_that_builds_but_fails_tests.snap  cli__check_succeeds_in_tree_that_builds_but_fails_tests.snap  cli__check_tree_with_mutants_skip.snap  cli__factorial.snap  cli__factorial__log_names.snap  cli__factorial_mutants_no_copy_target.snap  cli__insta_tree_succeeds_and_leaves_no_snaphots.snap  cli__list_files_in_cwd.snap  cli__list_files_json_well_tested.snap  cli__list_files_json_workspace.snap  cli__list_files_text_well_tested.snap  cli__list_mutants_for_testdata_tree_sites.snap  cli__list_mutants_in_all_trees__json__already_failing_doctests.snap  cli__list_mutants_in_all_trees__json__already_failing_tests.snap  cli__list_mutants_in_all_trees__json__already_hangs.snap  (+105 more)
(+256 files in other folders)
