[package]
name = "cargo-mutants"
version = "23.12.2"
edition = "2021"
authors = ["Martin Pool"]
license = "MIT"
description = "Inject bugs and see if your tests catch them"
repository = "https://github.com/sourcefrog/cargo-mutants"
homepage = "https://mutants.rs/"
categories = ["development-tools::testing"]
keywords = ["testing", "mutants", "cargo", "mutation-testing", "coverage"]
rust-version = "1.70"
exclude = [
    ".codespell*",
    ".markdownlint*",
    "*.md",
    ".devcontainer",
    ".gitattributes",
    ".gitignore",
    ".github",
    "mutants.out*",
    ".vscode",
    "book",
    "testdata",
]

[package.metadata.wix]
upgrade-guid = "CA7BFE8D-F3A7-4D1D-AE43-B7749110FA90"
path-guid = "457C7F8E-0F02-42CC-80D9-FE55FBED23F8"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
camino = "1.0"
cargo_metadata = "0.18"
clap = { version = "4", features = [
    "deprecated",
    "derive",
    "env",
    "wrap_help",
] }
clap_complete = "4"
console = "0.15"
ctrlc = { version = "3.2.1", features = ["termination"] }
fastrand = "2"
fs2 = "0.4"
globset = "0.4.8"
humantime = "2.1.0"
ignore = "0.4.20"
indoc = "2.0.0"
itertools = "0.11"
mutants = "0.0.3"
nix = "0.27"
patch = "0.7"
path-slash = "0.2"
quote = "1.0"
regex = "1.10"
serde_json = "1"
similar = "2.0"
strum = { version = "0.25", features = ["derive"] }
subprocess = "0.2.8"
tempfile = "3.2"
time = "0.3"
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
whoami = "1.2"

[dependencies.nutmeg]
version = "0.1.4"
# git = "https://github.com/sourcefrog/nutmeg.git"

[dependencies.proc-macro2]
features = ["span-locations"]
version = "1.0.29"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.syn]
version = "2"
features = ["full", "extra-traits", "visit"]

[dev-dependencies]
assert_cmd = "2.0"
cp_r = "0.5.1"
insta = "1.12"
lazy_static = "1.4"
predicates = "3"
pretty_assertions = "1"
regex = "1.5"
walkdir = "2.3"

[workspace]
members = ["mutants_attrs"]
resolver = "2"

# Exclude all testdata, so that they're more isolated from the real tree, and
# so that support for testing workspaces does not try to test the whole
# cargo-mutants tree.
exclude = [
    "testdata/already_failing_tests",
    "testdata/already_hangs",
    "testdata/cdylib",
    "testdata/cfg_attr_mutants_skip",
    "testdata/cfg_attr_test_skip",
    "testdata/custom_top_file",
    "testdata/dependency",
    "testdata/diff0",
    "testdata/diff1",
    "testdata/error_value",
    "testdata/everything_skipped",
    "testdata/factorial",
    "testdata/fails_without_feature",
    "testdata/hang_avoided_by_attr/",
    "testdata/hang_when_mutated",
    "testdata/insta",
    "testdata/integration_tests",
    "testdata/missing_test",
    "testdata/mut_ref",
    "testdata/never_type",
    "testdata/override_dependency",
    "testdata/package-fails/",
    "testdata/patch_dependency",
    "testdata/relative_dependency",
    "testdata/replace_dependency",
    "testdata/small_well_tested",
    "testdata/strict_warnings",
    "testdata/struct_with_no_default",
    "testdata/symlink",
    "testdata/unapply",
    "testdata/unsafe",
    "testdata/well_tested",
    "testdata/with_child_directories",
]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.7.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
# # Publish jobs to run in CI
# pr-run-mode = "upload"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
