[package]
name = "mutants-testdata-already-failing-doctests"
edition = "2018"
version = "0.0.0"
authors = ["Martin Pool"]
publish = false

[lib]
doctest = true # They exist, but we don't want cargo mutants to run them.

[workspace]
# Don't include this in the overall cargo-mutants workspace, because it fails to build.
