# Tests that paths in the 'replace' section are rewritten.
#
# This crate depends on the 'mutants' crate, but pulls it in from the
# tree of the cargo-mutants repo, rather than crates.io. If the path
# below wasn't fixed when copied to a scratch tree, the build would
# fail.

[package]
name = "cargo-mutants-testdata-replace-dependency"
version = "0.0.0"
edition = "2018"
authors = ["Martin Pool"]
publish = false

# This has to be a dependency that's published to crates.io.
[dependencies]
mutants = { version = "0" }

[replace]
"mutants:0.0.3" = { path = "../../mutants_attrs" }
